# hw_10_1_naumova

./: .coverage  .flake8  .gitignore  LICENSE.txt  README.md  pyproject.toml
src/: generators.py  mask.py  processing.py  transactions_generators.py  widget.py
tests/: test_mask_account.py  test_mask_card_number.py  test_processing_date.py  test_processing_state.py  test_widget_get_date.py  test_widget_mask_account_card.py
