[project]
name = "hw-right"
version = "0.1.0"
description = ""
authors = [
    {name = "Anastasiia Naumova",email = "vsedaleko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]

mypy = "^1.15.0"

exclude = 'venv'
warn_return_any = true
no_implicit_optional = true
disallow_untyped_defs = true
[tool.mypy]
