[project]
name = "hw-right"
version = "0.1.0"
description = ""
authors = [
    {name = "Anastasiia Naumova",email = "vsedaleko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"


[tool.black]
line-length = 119
exclude = '''
(
  /(
        \.eggs
    | \.git
    | \.mypy_cache
    | \.venv
  )/
  | foo.py

)
'''

[tool.poetry.group.lint.dependencies]
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"

[tool.isort]
line_length = 119

